--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Codacy Analysis CLI
       uses: codacy/codacy-analysis-cli-action@1.1.0
       with:
-        upload: true
+        upload: false
         fail-if-incomplete: true
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@0.2.0
