--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,6 +33,6 @@ jobs:
       uses: codacy/codacy-analysis-cli-action@1.1.0
       with:
         upload: false
-        fail-if-incomplete: true
+        fail-if-incomplete: false
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@0.2.0
