--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -36,3 +36,5 @@ jobs:
         fail-if-incomplete: false
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@0.2.0
+      with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
